test/errors/arrays/array_literal_unknown_type_error.hy
// EXPECT_OUTPUT: Cannot infer element type for empty array literal
int main()
{
    print([])
    return 0
}